--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "12.0.4",
+    "react-player": "^2.10.1",
+    "react-youtube": "^9.0.3",
     "web3modal": "1.9.5"
   },
   "devDependencies": {
