--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@openzeppelin/contracts": "4.5.0",
     "aos": "^2.3.4",
     "axios": "0.26.0",
+    "cloudinary-build-url": "^0.2.4",
     "ethers": "5.5.4",
     "hardhat": "2.9.0",
     "ipfs-http-client": "56.0.1",
